android performance report alignment issues fixed

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -5975,13 +5975,20 @@ color: #313131;
 }
 #formPerformance .perTabularView {
 	top: -40px !important;
-	left: -160px !important;
+	left: -96px !important;
 }
 #formPerformance strong {
 	color: #333;
 }
 #formPerformance #testResultsType {
-	margin-right: 2%;
+	margin-right: 1%;
+}
+#formPerformance #testResultFile {
+	margin-right: 1%;
+	width: 120px;
+}
+#formPerformance #testResultDeviceId {
+	width:140px !important;	
 }
 #formPerformance .header-background {
 	height: 0px !important;
